crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__conclave_mentor_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
assertion_line: 364
expression: "&ir"
---
{
  "items": [
    {
      "PreLoweredTrigger": {
        "mode": "ChangesZone",
        "execute": {
          "kind": "Spell",
          "effect": {
            "type": "GainLife",
            "amount": {
              "type": "Ref",
              "qty": {
                "type": "Power",
                "scope": {
                  "type": "Anaphoric"
                }
              }
            },
            "player": "controller"
          },
          "cost": null,
          "sub_ability": null,
          "duration": null,
          "description": null,
          "target_prompt": null,
          "sorcery_speed": false,
          "condition": null,
          "optional_targeting": false,
          "optional": false,
          "forward_result": false
        },
        "valid_card": {
          "type": "SelfRef"
        },
        "origin": "Battlefield",
        "destination": "Graveyard",
        "trigger_zones": [
          "Graveyard"
        ],
        "phase": null,
        "optional": false,
        "damage_kind": "Any",
        "secondary": false,
        "valid_target": null,
        "valid_source": null,
        "description": "When ~ dies, you gain life equal to its power.",
        "constraint": null,
        "condition": null,
        "batched": false
      }
    },
    {
      "PreLoweredReplacement": {
        "event": "AddCounter",
        "execute": null,
        "mode": {
          "type": "Mandatory"
        },
        "valid_card": {
          "type": "Typed",
          "type_filters": [
            "Creature"
          ],
          "controller": "You",
          "properties": []
        },
        "description": "If one or more +1/+1 counters would be put on a creature you control, that many plus one +1/+1 counters are put on that creature instead.",
        "condition": null,
        "quantity_modification": {
          "type": "Plus",
          "value": 1
        },
        "counter_match": {
          "type": "OfType",
          "data": "P1P1"
        }
      }
    }
  ],
  "source_text": "If one or more +1/+1 counters would be put on a creature you control, that many plus one +1/+1 counters are put on that creature instead.\nWhen this creature dies, you gain life equal to its power.",
  "card_name": "Conclave Mentor"
}
